--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-matplotlib==3.9.3
-mysql_connector_repackaged==0.3.1
-networkx==3.4.2
-pysnmp==7.1.13
-pywinrm==0.5.0
-screeninfo==0.8.1
-wmi==1.5.1
+matplotlib==3.3.4  # The latest valid version
+mysql-connector-python==8.0.23 # No change
+networkx==2.5.1 # No change
+pysnmp==4.4.12  # Updated for better compatibility
+pywinrm==0.5.0  # No change
+screeninfo==0.8.1  # No change
+wmi==1.5.1  # No change
+pyasn1==0.5.1 # Added to fix compatibility with pysnmp
+pyasn1-modules==0.2.8  # Added to fix compatibility with pysnmp
+pywin32  # Required for wmi
+requests==2.27.1  # Required for pywinrm
+xmltodict>=0.12.0  # Required for pywinrm
