--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
-matplotlib==3.3.4  # The latest valid version
-mysql-connector-python==8.0.23 # No change
-networkx==2.5.1 # No change
-pysnmp==4.4.12  # Updated for better compatibility
-pywinrm==0.5.0  # No change
-screeninfo==0.8.1  # No change
-wmi==1.5.1  # No change
-pyasn1==0.5.1 # Added to fix compatibility with pysnmp
-pyasn1-modules==0.2.8  # Added to fix compatibility with pysnmp
-pywin32  # Required for wmi
-requests==2.27.1  # Required for pywinrm
-xmltodict>=0.12.0  # Required for pywinrm
+certifi==2024.7.4
+charset-normalizer==2.0.12
+cycler==0.11.0
+dataclasses==0.8
+decorator==4.4.2
+idna==3.7
+kiwisolver==1.3.1
+matplotlib==3.3.4
+mysql-connector-python==8.0.23
+networkx==2.5.1
+numpy==1.19.5
+Pillow==8.4.0
+ply==3.11
+protobuf==3.19.6
+pyasn1==0.5.1
+pycryptodomex==3.20.0
+pyparsing==3.1.2
+pysmi==0.3.4
+pysnmp==4.4.12
+python-dateutil==2.9.0.post0
+python-nmap==0.7.1
+pyvmomi==8.0.3.0.1
+requests==2.27.1
+scapy==2.5.0
+scipy==1.5.4
+screeninfo==0.8.1
+six==1.16.0
+urllib3==1.26.19
