--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ ply==3.11
 protobuf==3.19.6
 pyasn1==0.5.1
 pycryptodomex==3.20.0
-pyparsing==3.1.2
+pyparsing
 pysmi==0.3.4
 pysnmp==4.4.12
 python-dateutil==2.9.0.post0
